# Serial-Data-Simulator

./: CMakeLists.txt  LICENSE  README.md  generate_firmware.c  serial_client.c  serial_client.py  serial_server.c  tcp_client.c  tcp_server.c
